# rivven

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  justfile  pyproject.toml
crates/rivven/: Cargo.toml  README.md
crates/rivven-cdc/: Cargo.toml  README.md
crates/rivven-cdc/benches/: cdc_latency.rs  cdc_throughput.rs
crates/rivven-cdc/examples/: basic_cdc.rs  full_integration.rs
crates/rivven-cdc/fuzz/: Cargo.toml
crates/rivven-cdc/fuzz/fuzz_targets/: fuzz_cdc_event.rs  fuzz_mysql_binlog_decoder.rs  fuzz_pgoutput_decoder.rs  fuzz_sql_injection.rs  fuzz_validator.rs
crates/rivven-cdc/src/: lib.rs
crates/rivven-cdc/src/common/: batch.rs  checkpoint.rs  compaction.rs  connector.rs  dedup.rs  encryption.rs  (+32 more)
crates/rivven-cdc/tests/: cdc_advanced.rs  cdc_integration.rs  cdc_mysql_integration.rs  cdc_mysql_stress.rs  cdc_postgres_integration.rs  cdc_sqlserver_integration.rs  cdc_stress.rs  integration_test.rs  mysql_version_matrix.rs  postgres_version_matrix.rs
crates/rivven-cli/: Cargo.toml  README.md
crates/rivven-cli/src/: main.rs
crates/rivven-client/: Cargo.toml  README.md
crates/rivven-client/src/: client.rs  consumer.rs  error.rs  lib.rs  pipeline.rs  producer.rs  resilient.rs
crates/rivven-cluster/: Cargo.toml  README.md
crates/rivven-cluster/src/: config.rs  consumer_coordinator.rs  coordinator.rs  error.rs  lib.rs  membership.rs  metadata.rs  node.rs  observability.rs  partition.rs  placement.rs  protocol.rs  quic_transport.rs  raft.rs  replication.rs  transport.rs
crates/rivven-cluster/tests/: cluster_integration_e2e.rs  integration.rs  three_node_cluster.rs
crates/rivven-connect/: Cargo.toml  README.md
crates/rivven-connect-derive/: Cargo.toml  README.md
crates/rivven-connect-derive/src/: lib.rs
crates/rivven-connect/examples/: datagen-demo.yaml
crates/rivven-connect/src/: broker_client.rs  config.rs  error.rs  health.rs  lib.rs  main.rs  metrics.rs  rate_limiter.rs  sink_runner.rs  source_runner.rs  telemetry.rs  topic_resolver.rs  types.rs
crates/rivven-connect/tests/: e2e_pipeline.rs  iceberg_sink_test.rs  rdbc_connector_test.rs
crates/rivven-core/: Cargo.toml  README.md
crates/rivven-core/benches/: performance.rs
crates/rivven-core/src/: async_io.rs  auth.rs  backpressure.rs  bloom.rs  buffer_pool.rs  cedar_authz.rs  compression.rs  concurrent.rs  config.rs  consumer_group.rs  crypto.rs  encryption.rs  error.rs  hash.rs  idempotent.rs  io_uring.rs  lib.rs  message.rs  metrics.rs  offset.rs  oidc.rs  partition.rs  quota.rs  schema_registry.rs  serde_utils.rs  service_auth.rs  tls.rs  topic.rs  topic_config.rs  transaction.rs  validation.rs  vectorized.rs  wal.rs  zero_copy.rs
crates/rivven-dashboard/: Cargo.toml  README.md
crates/rivven-dashboard/src/: api.rs  config.rs  lib.rs
crates/rivven-integration-tests/: Cargo.toml  README.md
crates/rivven-integration-tests/src/: fixtures.rs  helpers.rs  lib.rs  mocks.rs
crates/rivven-integration-tests/tests/: admin_api.rs  cdc_mariadb.rs  cdc_mysql.rs  cdc_postgres.rs  chaos.rs  client_protocol.rs  cluster_consensus.rs  compression.rs  connect_distributed.rs  connect_e2e.rs  consumer_groups.rs  e2e_pipeline.rs  externalize_blob.rs  kafka_connector.rs  mqtt_connector.rs  observability.rs  protobuf_protocol.rs  quotas.rs  rbac.rs  rdbc_connectors.rs  schema_avro.rs  schema_protobuf.rs  security.rs  stress.rs  tiered_storage.rs  tls.rs  transactions.rs
crates/rivven-llm/: Cargo.toml  README.md
crates/rivven-llm/src/: bedrock.rs  error.rs  lib.rs  openai.rs  provider.rs  types.rs
crates/rivven-operator/: Cargo.toml  README.md
crates/rivven-operator/deploy/: operator.yaml
crates/rivven-operator/src/: cluster_client.rs  connect_controller.rs  controller.rs  crd.rs  error.rs  lib.rs  main.rs  resources.rs  schema_registry_controller.rs  topic_controller.rs
crates/rivven-protocol/: Cargo.toml  README.md  build.rs
crates/rivven-protocol/proto/: rivven.proto
crates/rivven-protocol/src/: error.rs  lib.rs  messages.rs  metadata.rs  proto_convert.rs  serde_utils.rs  types.rs
crates/rivven-python/: Cargo.toml  README.md  pyproject.toml
crates/rivven-python/src/: client.rs  consumer.rs  error.rs  lib.rs  message.rs  producer.rs  producer_state.rs
crates/rivven-queue/: Cargo.toml  README.md
crates/rivven-queue/src/: kafka.rs  lib.rs  mqtt.rs  pubsub.rs  sqs.rs
crates/rivven-rdbc/: Cargo.toml  README.md
crates/rivven-rdbc/src/: connection.rs  dialect.rs  error.rs  lib.rs  mysql.rs  pool.rs  postgres.rs  schema.rs  security.rs  sink.rs  source.rs  sqlserver.rs  types.rs
crates/rivven-rdbc/tests/: connection_test.rs  dialect_test.rs  error_test.rs  pool_test.rs  sink_test.rs  source_test.rs  types_test.rs
crates/rivven-schema/: Cargo.toml  README.md
crates/rivven-schema/src/: auth.rs  compatibility.rs  config.rs  error.rs  fingerprint.rs  lib.rs  main.rs  metrics.rs  registry.rs  server.rs  types.rs  validation.rs
crates/rivven-schema/tests/: integration_tests.rs
crates/rivven-server/: Cargo.toml  README.md  build.rs
crates/rivven-server/fuzz/: Cargo.toml
crates/rivven-server/src/: auth_handler.rs  cli.rs  cluster_server.rs  dashboard.rs  handler.rs  lib.rs  main.rs  partitioner.rs  protocol.rs  protocol_tests.rs  raft_api.rs  rate_limiter.rs  secure_server.rs  server.rs
crates/rivven-server/static/: index.html
crates/rivven-storage/: Cargo.toml  README.md
crates/rivven-storage/src/: azure.rs  gcs.rs  lib.rs  parquet.rs  s3.rs
crates/rivven-warehouse/: Cargo.toml  README.md
crates/rivven-warehouse/src/: bigquery.rs  lib.rs  redshift.rs  snowflake.rs
crates/rivven/src/: lib.rs  main.rs
crates/rivvend/: Cargo.toml  README.md  build.rs
crates/rivvend/dashboard/: Cargo.lock.template  Cargo.toml.template  Trunk.toml  index.html  styles.css
crates/rivvend/fuzz/: Cargo.toml
crates/rivvend/src/: auth_handler.rs  cli.rs  cluster_server.rs  dashboard.rs  framing.rs  group_coordinator.rs  handler.rs  lib.rs  main.rs  partitioner.rs  protocol.rs  protocol_tests.rs  raft_api.rs  rate_limiter.rs  secure_server.rs  server.rs
(+237 files in other folders)
