[workspace]
resolver = "2"
members = [
    "crates/rivven",
    "crates/rivven-core",
    "crates/rivven-protocol",
    "crates/rivvend",
    "crates/rivven-client",
    "crates/rivven-cdc",
    "crates/rivven-connect",
    "crates/rivven-connect-derive",
    "crates/rivven-cluster",
    "crates/rivven-python",
    "crates/rivven-storage",
    "crates/rivven-warehouse",
    "crates/rivven-queue",
    "crates/rivven-operator",
    "crates/rivven-integration-tests",  # Integration tests (not published)
]
exclude = [
    "crates/rivvend/fuzz",
    "crates/rivvend/dashboard",  # WASM crate - built by rivvend's build.rs with trunk
]

[workspace.package]
version = "0.0.4"
edition = "2021"
rust-version = "1.89"
authors = ["hupe1980"]
license = "Apache-2.0"
repository = "https://github.com/hupe1980/rivven"
homepage = "https://hupe1980.github.io/rivven"
keywords = ["kafka", "streaming", "event-driven", "messaging", "distributed"]
categories = ["asynchronous", "network-programming", "database"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
postcard = { version = "1", features = ["alloc"] }

# Networking
bytes = "1.5"
futures = "0.3"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.4", features = ["derive"] }
url = "2.5"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Serde helpers
serde_bytes = "0.11"

# Authorization - Cedar policy engine
cedar-policy = "4"

# OIDC/OAuth2 authentication
openidconnect = "3"
oauth2 = "4"
jsonwebtoken = "9"

# Internal crates
rivven-core = { version = "0.0.4", path = "crates/rivven-core", default-features = false }
rivven-protocol = { version = "0.0.4", path = "crates/rivven-protocol" }
rivvend = { version = "0.0.4", path = "crates/rivvend" }
rivven-client = { version = "0.0.4", path = "crates/rivven-client" }
rivven-cdc = { version = "0.0.4", path = "crates/rivven-cdc" }
rivven-connect = { version = "0.0.4", path = "crates/rivven-connect" }
rivven-connect-derive = { version = "0.0.4", path = "crates/rivven-connect-derive" }
rivven-cluster = { version = "0.0.4", path = "crates/rivven-cluster" }
rivven-storage = { version = "0.0.4", path = "crates/rivven-storage" }
rivven-warehouse = { version = "0.0.4", path = "crates/rivven-warehouse" }
rivven-queue = { version = "0.0.4", path = "crates/rivven-queue" }
rivven-operator = { version = "0.0.4", path = "crates/rivven-operator" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
