[workspace]
resolver = "2"
members = [
    "crates/rivven",
    "crates/rivven-core",
    "crates/rivven-protocol",
    "crates/rivvend",
    "crates/rivven-client",
    "crates/rivven-cdc",
    "crates/rivven-connect",
    "crates/rivven-connect-derive",
    "crates/rivven-cluster",
    "crates/rivven-schema",
    "crates/rivven-python",
    "crates/rivven-operator",
    "crates/rivven-integration-tests",  # Integration tests (not published)
]
exclude = [
    "crates/rivvend/fuzz",
    "crates/rivvend/dashboard",  # Static HTML - embedded by rivvend via rust-embed
]

[workspace.package]
version = "0.0.4"
edition = "2021"
rust-version = "1.89"
authors = ["hupe1980"]
license = "Apache-2.0"
repository = "https://github.com/hupe1980/rivven"
homepage = "https://hupe1980.github.io/rivven"
keywords = ["kafka", "streaming", "event-driven", "messaging", "distributed"]
categories = ["asynchronous", "network-programming", "database"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
postcard = { version = "1", features = ["alloc"] }

# Networking
bytes = "1.11"  # Updated: security fix RUSTSEC-2026-0007
futures = "0.3"
axum = "0.7"
tower = "0.5"   # Updated: align on latest
tower-http = { version = "0.6", features = ["cors", "trace"] }  # Updated: align with axum 0.7

# Error handling
thiserror = "2.0"  # Updated: align on thiserror 2.x
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.4", features = ["derive"] }
url = "2.5"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Serde helpers
serde_bytes = "0.11"

# Authorization - Cedar policy engine
cedar-policy = "4"

# OIDC/OAuth2 authentication
openidconnect = "3"
oauth2 = "4"
jsonwebtoken = "9"

# Metrics - unified across workspace
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
prometheus = "0.13"  # For schema registry metrics

# Common dependencies - unified versions
apache-avro = "0.17"  # Unified: was 0.16/0.17 split
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }  # Unified: was 0.11/0.12 split
rustls = { version = "0.23", features = ["aws-lc-rs"] }
rustls-pemfile = "2.2"
rustls-native-certs = "0.8"  # Unified: was 0.7/0.8 split
tokio-rustls = "0.26"
async-trait = "0.1"
rand = "0.8"
uuid = { version = "1.6", features = ["v4"] }

# Internal crates
rivven-core = { version = "0.0.4", path = "crates/rivven-core", default-features = false }
rivven-protocol = { version = "0.0.4", path = "crates/rivven-protocol" }
rivvend = { version = "0.0.4", path = "crates/rivvend" }
rivven-client = { version = "0.0.4", path = "crates/rivven-client" }
rivven-cdc = { version = "0.0.4", path = "crates/rivven-cdc" }
rivven-connect = { version = "0.0.4", path = "crates/rivven-connect" }
rivven-connect-derive = { version = "0.0.4", path = "crates/rivven-connect-derive" }
rivven-cluster = { version = "0.0.4", path = "crates/rivven-cluster" }
rivven-schema = { version = "0.0.4", path = "crates/rivven-schema", default-features = false }
rivven-operator = { version = "0.0.4", path = "crates/rivven-operator" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
