[workspace]
resolver = "2"
members = [
    "crates/rivven",
    "crates/rivven-core",
    "crates/rivven-protocol",
    "crates/rivvend",
    "crates/rivven-client",
    "crates/rivven-cdc",
    "crates/rivven-connect",
    "crates/rivven-connect-derive",
    "crates/rivven-cluster",
    "crates/rivven-schema",
    "crates/rivven-python",
    "crates/rivven-operator",
    "crates/rivven-rdbc",
    "crates/rivven-integration-tests",  # Integration tests (not published)
]
exclude = [
    "crates/rivvend/dashboard",  # Static HTML - embedded by rivvend via rust-embed
]

[workspace.package]
version = "0.0.12"
edition = "2021"
rust-version = "1.89"
authors = ["hupe1980"]
license = "Apache-2.0"
repository = "https://github.com/hupe1980/rivven"
homepage = "https://hupe1980.github.io/rivven"
keywords = ["kafka", "streaming", "event-driven", "messaging", "distributed"]
categories = ["asynchronous", "network-programming", "database"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
postcard = { version = "1", features = ["alloc"] }

# Networking
bytes = "1.11"  # Updated: security fix RUSTSEC-2026-0007
futures = "0.3"
axum = "0.7"
tower = "0.5"   # Updated: align on latest
tower-http = { version = "0.6", features = ["cors", "trace"] }  # Updated: align with axum 0.7

# Error handling
thiserror = "2.0"  # Updated: align on thiserror 2.x
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.4", features = ["derive", "env"] }
url = "2.5"

# Time
chrono = { version = "0.4", features = ["serde"] }
time = "0.3.47"  # Pinned to fix RUSTSEC-2026-0009

# Serde helpers
serde_bytes = "0.11"

# Authorization - Cedar policy engine
cedar-policy = "4"

# OIDC/OAuth2 authentication
openidconnect = "3"
oauth2 = "4"
jsonwebtoken = "9"

# Metrics - unified across workspace (uses metrics crate facade, not prometheus crate)
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

# Common dependencies - unified versions
apache-avro = "0.17"  # Unified: was 0.16/0.17 split
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }  # Unified: was 0.11/0.12 split
rustls = { version = "0.23", features = ["aws-lc-rs"] }
rustls-pemfile = "2.2"
rustls-native-certs = "0.8"  # Unified: was 0.7/0.8 split
tokio-rustls = "0.26"
async-trait = "0.1"
rand = "0.8"
uuid = { version = "1.6", features = ["v4", "serde"] }
subtle = "2.6"
parking_lot = "0.12"
argon2 = { version = "0.5", features = ["password-hash"] }

# Internal crates
rivven-core = { version = "0.0.12", path = "crates/rivven-core", default-features = false }
rivven-protocol = { version = "0.0.12", path = "crates/rivven-protocol" }
rivvend = { version = "0.0.12", path = "crates/rivvend" }
rivven-client = { version = "0.0.12", path = "crates/rivven-client" }
rivven-cdc = { version = "0.0.12", path = "crates/rivven-cdc" }
rivven-connect = { version = "0.0.12", path = "crates/rivven-connect" }
rivven-connect-derive = { version = "0.0.12", path = "crates/rivven-connect-derive" }
rivven-cluster = { version = "0.0.12", path = "crates/rivven-cluster" }
rivven-schema = { version = "0.0.12", path = "crates/rivven-schema", default-features = false }
rivven-operator = { version = "0.0.12", path = "crates/rivven-operator" }
rivven-rdbc = { version = "0.0.12", path = "crates/rivven-rdbc", default-features = false }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

# ============================================================================
# Dependency Deduplication Analysis
# ============================================================================
# Run `cargo tree --duplicates` to see current duplicate count.
# As of v0.0.8: ~79 duplicate versions (down from 82)
#
# These duplicates are UNAVOIDABLE due to upstream crate dependencies:
#
# | Crate         | Old   | New   | Blocked By                              |
# |---------------|-------|-------|----------------------------------------|
# | thiserror     | 1.x   | 2.x   | apache-avro, x509-parser, asn1-rs      |
# | base64        | 0.21  | 0.22  | mysql_common, docker_credential        |
# | rand          | 0.8   | 0.9   | most ecosystem uses 0.8                |
# | getrandom     | 0.2   | 0.3   | tied to rand version                   |
# | hashbrown     | 0.14  | 0.15+ | dashmap 6.x pins 0.14                  |
# | itertools     | 0.10  | 0.14  | criterion pins 0.10                    |
# | socket2       | 0.5   | 0.6   | mysql_async pins 0.5                   |
# | nom           | 7.x   | 8.x   | asn1-rs, der-parser pin 7.x            |
# | darling       | 0.20  | 0.21  | serde_with pins 0.20                   |
#
# Deduplication strategies applied:
# 1. Unified workspace deps: apache-avro, reqwest, tower, metrics
# 2. Feature-gated optional deps to reduce build graph
# 3. rustls-only TLS stack (no openssl)
#
# Monitor upstream: https://github.com/dtolnay/thiserror/issues (thiserror 2.x adoption)
# ============================================================================
