[package]
name = "rivven-cdc"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Change Data Capture for Rivven - PostgreSQL, MySQL, MariaDB"
keywords = ["cdc", "postgres", "mysql", "mariadb", "replication"]

[features]
default = ["postgres", "mysql"]
# PostgreSQL CDC via logical replication (pgoutput)
postgres = [
    "dep:tokio-postgres",
    "dep:postgres-protocol",
    "dep:postgres-types",
    "dep:md-5",
    "dep:sha2",
    "dep:hmac",
    "dep:pbkdf2",
    "dep:base64",
    "dep:rand",
    "dep:fallible-iterator",
]
# PostgreSQL with TLS support (rustls-based)
postgres-tls = [
    "postgres",
    "dep:tokio-postgres-rustls",
    "dep:rustls",
    "dep:rustls-pemfile",
    "dep:webpki-roots",
    "dep:tokio-rustls",
]
# MySQL CDC via binary log replication
mysql = [
    "dep:sha1",
    "dep:sha2",
    "dep:base64",
    "dep:mysql_async",
    "dep:flate2",
]
# MySQL with TLS support (rustls-based)
mysql-tls = [
    "mysql",
    "dep:rustls",
    "dep:rustls-pemfile",
    "dep:webpki-roots",
    "dep:tokio-rustls",
]
# MariaDB CDC (uses MySQL binlog protocol with MariaDB extensions)
mariadb = ["mysql"]
# All CDC sources
full = ["postgres", "postgres-tls", "mysql", "mysql-tls", "mariadb"]

[dependencies]
rivven-core = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
bytes.workspace = true
chrono.workspace = true
tokio-util = { version = "0.7", features = ["codec"] }
url = "2.5.8"
async-trait = "0.1.89"
apache-avro = "0.21"
regex = "1.10"
once_cell = "1.19"
hex = "0.4"

# Metrics
metrics = "0.24"

# PostgreSQL-specific dependencies
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"], optional = true }
postgres-protocol = { version = "0.6", optional = true }
postgres-types = { version = "0.2", features = ["derive"], optional = true }
md-5 = { version = "0.10", optional = true }
fallible-iterator = { version = "0.2", optional = true }

# TLS support for PostgreSQL
tokio-postgres-rustls = { version = "0.13", optional = true }
rustls = { version = "0.23", optional = true }
rustls-pemfile = { version = "2.1", optional = true }
webpki-roots = { version = "0.26", optional = true }
tokio-rustls = { version = "0.26", optional = true }

# MySQL-specific dependencies
sha1 = { version = "0.10", optional = true }
sha2 = { version = "0.10", optional = true }
base64 = { version = "0.22", optional = true }
mysql_async = { version = "0.34", optional = true, default-features = false }
flate2 = { version = "1.1", optional = true, default-features = false, features = ["rust_backend"] }

# SCRAM authentication (PostgreSQL SCRAM-SHA-256)
hmac = { version = "0.12", optional = true }
pbkdf2 = { version = "0.12", optional = true }
rand = { version = "0.8", optional = true }

# Encryption
ring = "0.17"

# Utilities
uuid = { version = "1.6", features = ["v4"] }
chrono-tz = "0.10"

[dev-dependencies]
uuid = { version = "1.6", features = ["v4"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres", "mysql", "mariadb"] }
tokio-test = "0.4"
pretty_assertions = "1.4"
criterion = { version = "0.5", features = ["async_tokio"] }
proptest = "1.5"
fake = { version = "3.0", features = ["derive", "chrono"] }
serial_test = "3.2"
rstest = "0.24"
parking_lot = "0.12"
tempfile = "3.10"

[[test]]
name = "cdc_integration"
path = "tests/cdc_integration.rs"
required-features = ["postgres"]

[[test]]
name = "cdc_advanced"
path = "tests/cdc_advanced.rs"
required-features = ["postgres"]

[[test]]
name = "cdc_stress"
path = "tests/cdc_stress.rs"
required-features = ["postgres"]

[[test]]
name = "cdc_mysql_integration"
path = "tests/cdc_mysql_integration.rs"
required-features = ["mysql"]

[[bench]]
name = "cdc_throughput"
harness = false
required-features = ["postgres"]

[[bench]]
name = "cdc_latency"
harness = false
required-features = ["postgres"]
