[package]
name = "rivven-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line interface for Rivven event streaming platform"

[[bin]]
name = "rivvenctl"
path = "src/main.rs"

[dependencies]
rivven-core = { workspace = true }
rivven-client = { workspace = true }
rivven-server = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
bytes = { workspace = true }
ctrlc = "3.4"
