[package]
name = "rivven-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "High-performance async client for Rivven event streaming platform"

[features]
default = []
tls = ["rivven-core/tls"]

[dependencies]
rivven-core = { workspace = true }
rivven-protocol = { workspace = true }
tokio = { workspace = true }
bytes = { workspace = true }
postcard = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
base64 = "0.22"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
hex = "0.4"
