[package]
name = "rivven-cluster"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Distributed clustering for Rivven - SWIM membership, Raft consensus, ISR replication"

[features]
default = ["raft", "swim", "metrics-prometheus", "compression"]
raft = ["dep:openraft", "dep:rocksdb", "dep:reqwest"]
swim = []
quic = ["dep:quinn", "dep:rustls", "dep:rustls-pemfile", "dep:rcgen", "dep:rustls-native-certs", "dep:sha2", "dep:hex", "dep:x509-parser"]
full = ["raft", "swim", "metrics-prometheus", "compression", "quic"]

# Compression (LZ4/Zstd for network and storage)
compression = ["rivven-core/compression"]

# Observability backend - lightweight Rust-native metrics
metrics-prometheus = ["dep:metrics", "dep:metrics-exporter-prometheus"]

[dependencies]
# Core Rivven
rivven-core = { workspace = true, default-features = false }

# Core
tokio = { version = "1", features = ["full", "sync", "time", "net", "io-util"] }
async-trait = "0.1"
futures = "0.3"
bytes = { version = "1.5", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
postcard = { version = "1", features = ["alloc"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"

# Networking
tokio-util = { version = "0.7", features = ["codec"] }

# Raft consensus
openraft = { version = "0.9", features = ["serde", "storage-v2"], optional = true }
rocksdb = { version = "0.21", optional = true }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"], optional = true }

# Consistent hashing
hashring = "0.3"

# QUIC transport
quinn = { version = "0.11", optional = true }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"], optional = true }
rustls-pemfile = { version = "2.1", optional = true }
rcgen = { version = "0.13", optional = true }
rustls-native-certs = { version = "0.7", optional = true }
sha2 = { version = "0.10", optional = true }
hex = { version = "0.4", optional = true }
x509-parser = { version = "0.16", optional = true }

# Time
chrono = "0.4"

# Random
rand = "0.8"

# Metrics - lightweight Rust-native (default)
metrics = { version = "0.23", optional = true }
metrics-exporter-prometheus = { version = "0.15", optional = true }

# Concurrency
dashmap = "6.1"
parking_lot = "0.12"
crossbeam-channel = "0.5"

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
