[package]
name = "rivven-cluster"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Distributed clustering for Rivven - SWIM membership, Raft consensus, ISR replication"

[features]
default = ["raft", "swim", "metrics-prometheus", "compression"]
raft = ["dep:openraft", "dep:redb", "dep:reqwest"]
swim = []
quic = ["dep:quinn", "dep:rustls", "dep:rustls-pemfile", "dep:rcgen", "dep:rustls-native-certs", "dep:sha2", "dep:hex", "dep:x509-parser"]
full = ["raft", "swim", "metrics-prometheus", "compression", "quic"]

# Compression (LZ4/Zstd for network and storage)
compression = ["rivven-core/compression"]

# Observability backend - lightweight Rust-native metrics
metrics-prometheus = ["dep:metrics", "dep:metrics-exporter-prometheus"]

[dependencies]
# Core Rivven
rivven-core = { workspace = true, default-features = false }

# Core
tokio = { version = "1", features = ["full", "sync", "time", "net", "io-util"] }
futures = { workspace = true }
bytes = { workspace = true, features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
postcard = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Raft consensus
openraft = { version = "0.9", features = ["serde", "storage-v2"], optional = true }
redb = { version = "2.4", optional = true }
reqwest = { workspace = true, optional = true }

# Consistent hashing
hashring = "0.3"

# QUIC transport
quinn = { version = "0.11", optional = true }
rustls = { workspace = true, optional = true }
rustls-pemfile = { workspace = true, optional = true }
rcgen = { version = "0.13", optional = true }
rustls-native-certs = { workspace = true, optional = true }
sha2 = { version = "0.10", optional = true }
hex = { version = "0.4", optional = true }
x509-parser = { version = "0.16", optional = true }

# Time
chrono = { workspace = true }

# Random
rand = { workspace = true }

# Metrics - lightweight Rust-native (default)
metrics = { workspace = true, optional = true }
metrics-exporter-prometheus = { workspace = true, optional = true }

# Concurrency
dashmap = "6.1"
parking_lot = "0.12"

# UUID generation
uuid = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
