[package]
name = "rivven-connect-derive"
version = "0.0.1"
edition = "2021"
description = "Derive macros for Rivven connector development"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rivven/rivven"
keywords = ["event-streaming", "connector", "derive", "macro"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "parsing"] }
darling = "0.20"
