[package]
name = "rivven-connect-derive"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Derive macros for Rivven connector development"
keywords = ["event-streaming", "connector", "derive", "macro"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "parsing"] }
darling = "0.20"
